welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: Missing closing brace `}' assumed here
        }
        ^