welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {
        	for (a<-1 to 7) {avance(); if(estSurBiscuit()) {prendBiscuit();}}
          for(b<-1 to 7) {if(!estFaceMur) {recule();} else {poseBiscuit();}
          
          for (i <- 1 to 7) {
            goAndGet();
            right();
            forward();
            left();
        }

     

        